--- a/CarFactory/CarFactoryClientApp/Views/Shared/_Layout.cshtml
+++ b/CarFactory/CarFactoryClientApp/Views/Shared/_Layout.cshtml
@@ -27,6 +27,10 @@ border-bottom box-shadow mb-3">
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area=""
+                               asp-controller="Home" asp-action="Mail">Mail</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area=""
                                asp-controller="Home" asp-action="Privacy">Personal data</a>
                         </li>
                         <li class="nav-item">
