--- a/CarFactory/CarFactoryClientApp/Views/Home/Mail.cshtml
+++ b/CarFactory/CarFactoryClientApp/Views/Home/Mail.cshtml
@@ -4,16 +4,13 @@
     ViewData["Title"] = "Mail";
 }
 <div class="text-center">
-    <h1 class="display-4">Orders</h1>
+    <h1 class="display-4">Mail</h1>
 </div>
 <div class="text-center">
     @{
         <table class="table">
             <thead>
                 <tr>
-                    <th>
-                        MessageId
-                    </th>
                     <th>
                         SenderName
                     </th>
@@ -32,9 +29,6 @@
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.MessageId)
-                        </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.SenderName)
                         </td>
