--- a/CarFactory/WarehouseEmployeeApp/Views/Home/Enter.cshtml
+++ b/CarFactory/WarehouseEmployeeApp/Views/Home/Enter.cshtml
@@ -4,15 +4,18 @@
 <div class="text-center">
     <h2 class="display-4">Enter</h2>
 </div>
-<form method="post">
-    <div class="row">
-        <div class="col-4">Password:</div>
-        <div class="col-8"><input type="password" name="password" /></div>
+<form class="container-fluid" method="post">
+    <div class="form-group">
+        <div class="row">
+            <div class="col-4">Password:</div>
+            <div class="col-8"><input type="password" name="password" /></div>
+        </div>
     </div>
-    <div class="row">
-        <div class="col-4"></div>
-        <div class="col-8">
-            <input type="submit" value="Enter" class="btn btn-primary" />
+    <div class="form-group row">
+        <div class="col-lg-12">
+            <button type="submit" style="min-width: 100px" class="btn btn-sm btn-light">
+                Enter
+            </button>
         </div>
     </div>
 </form>
