--- a/CarFactory/WarehouseEmployeeApp/Views/Shared/_Layout.cshtml
+++ b/CarFactory/WarehouseEmployeeApp/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area=""
-                               asp-controller="Home" asp-action="Restoking">Add components</a>
+                               asp-controller="Home" asp-action="AddComponentsToWarehouse">Add components</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area=""
