--- a/CarFactory/CarFactoryClientApp/Views/Home/Mail.cshtml
+++ b/CarFactory/CarFactoryClientApp/Views/Home/Mail.cshtml
@@ -46,15 +46,16 @@
             </tbody>
         </table>
     }
-    <div style="display: flex; justify-content: space-between; max-width: 100px;">
+    <div style="display: flex; justify-content: space-between; max-width: 120px;">
         @{
             if ((Model.page - 1) >= 1)
             {
-                <a asp-action="Mail" asp-route-page="@(Model.page-1)">Prev</a>
+                <a asp-action="Mail" asp-route-page="@(Model.page-1)">Prev @(Model.page-1)</a>
             }
+            <span style="font-weight: bold;">@(Model.page)</span>
             if ((Model.page + 1) <= Model.maxPage)
             {
-                <a asp-action="Mail" asp-route-page="@(Model.page+1)">Next</a>
+                <a asp-action="Mail" asp-route-page="@(Model.page+1)">Next @(Model.page+1)</a>
             }
         }
     </div>
